# Projet-Court-DDP-Romain-GERARD

./: .gitignore  README.md  evaluate_threading.py  main.py  manif.csv  pyproject.toml
